backends/drm: commit m_next state properly

Without this, atomic test failures might restore state that's out of date.

BUG: 477451